apps/multimedia/radarr/04_statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: multimedia
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  serviceName: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: "Europe/Berlin"
        name: radarr
        image: ghcr.io/linuxserver/radarr
        ports:
          - containerPort: 7878
            name: http-radarr
        readinessProbe:
          tcpSocket:
            port: http-radarr
          failureThreshold: 5
          timeoutSeconds: 10
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /movies
            name: data
          - mountPath: /download/completed
            name: downloads
        resources:
          requests:
            cpu: 20m
            memory: 635Mi
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: movies
      - name: downloads
        persistentVolumeClaim:
          claimName: torrents
      nodeSelector:
        kubernetes.io/arch: "amd64"
      tolerations: []
  volumeClaimTemplates:
  - metadata:
      name: config
      namespace: multimedia
      annotations:
        volume.beta.kubernetes.io/storage-class: "longhorn"
    spec:
      storageClassName: "longhorn"
      accessModes:
        - ReadWriteMany
      resources:
        requests:
          storage: 800Mi
