apps/multimedia/radarr/03_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: multimedia-svc
  labels:
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: multimedia
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.2.95
  ports:
  - port: 7878
    protocol: TCP
    targetPort: http-radarr
  selector:
    app.kubernetes.io/name: radarr
  sessionAffinity: None
  type: LoadBalancer
