apps/multimedia/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    reloader.homer/group: Multimedia
    reloader.homer/logo: https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/radarr.svg
    reloader.homer/name: Radarr
    reloader.homer/subtitle: Movie collection management
    reloader.homer/tag: local
  labels:
    reloader.homer/enabled: "true"
  name: radarr
spec:
  ingressClassName: private
  rules:
    - host: radarr.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 7878
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radarr.ankhmorpork.thaum.xyz
      secretName: radarr-ankhmorpork-thaum-xyz-tls
